      be changed.
    - Implement NAMESERVER_STATUS, NAMESERVER_ALL_DOWN, DNS_HIJACKED,
      and DNS_USELESS server status events so controllers can learn
      about changes to DNS server status.

  o Minor features (directory):
    - Authorities do not recommend exits as guards if this would shift
      excess load to the exit nodes.

  o Major bugfixes:
    - Fix an assert error introduced in 0.1.2.5-alpha: if you're an
      advertised exit node, somebody might try to exit from you when
      you're bootstrapping and before you've built your descriptor yet.

  o Minor bugfixes:
    - Restore a warning message if we accidentally resolve an address that
      we weren't planning to resolve.
    - Prevent an (unlikely) bug on 32-bit architectures that could make
      directories send 503s incorrectly when BandwidthBurst plus 2 times
      BandwidthRate was over to 2 GB.
    - Warn that using select() on any libevent version before 1.1 will be
      unnecessarily slow (even for select()).


Changes in version 0.1.2.5-alpha - 2007-01-06
  o Major features:
    - Enable write limiting as well as read limiting. Now we sacrifice
      capacity if we're pushing out lots of directory traffic, rather
      than overrunning the user's intended bandwidth limits.
    - Include TLS overhead when counting bandwidth usage; previously, we
      would count only the bytes sent over TLS, but not the bytes used
      to send them.
    - Support running the Tor service with a torrc not in the same
      directory as tor.exe and default to using the torrc located in
      the %appdata%\Tor\ of the user who installed the service. Patch
      from Matt Edman.
    - Servers now check for the case when common DNS requests are going to
      wildcarded addresses (i.e. all getting the same answer), and change
      their exit policy to reject *:* if it's happening.
    - Implement BEGIN_DIR cells, so we can connect to the directory